--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   shared_preferences: ^2.0.8
   english_words: ^4.0.0
   provider: ^6.0.0
+  fluttertoast: ^8.2.4
 
 dev_dependencies:
   flutter_test:
