--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   provider: ^6.0.0
   fluttertoast: ^8.2.4
   csv: ^6.0.0
+  url_launcher: ^6.0.12
 
 dev_dependencies:
   flutter_test:
