--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,8 @@ dependencies:
   fluttertoast: ^8.2.5
   csv: ^6.0.0
   url_launcher: ^6.0.12
+  pdf: ^3.10.8
+  path_provider: ^2.1.3
 
 dev_dependencies:
   flutter_test:
