--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   url_launcher: ^6.0.12
   pdf: ^3.10.8
   path_provider: ^2.1.3
+  open_file: ^3.3.2
 
 dev_dependencies:
   flutter_test:
