--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,3 +34,7 @@ flutter:
   assets:
     - img/
     - data/
+    - data/maleheight.csv
+    - data/femaleheight.csv
+    - data/maleweight.csv
+    - data/femaleweight.csv
