--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,4 @@
 name: teaf_app
-description: A new Flutter project.
 
 publish_to: "none" # Remove this line if you wish to publish to pub.dev
 
@@ -19,21 +18,37 @@ dependencies:
   fluttertoast: ^8.2.5
   csv: ^6.0.0
   url_launcher: ^6.0.12
-  pdf: ^3.10.8
   path_provider: ^2.1.3
-  open_file: ^3.3.2
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
+  flutter_launcher_icons: ^0.11.0
   flutter_lints: ^2.0.0
+  flutter_app_name: ^0.1.0
 
 flutter:
   uses-material-design: true
   assets:
     - img/
     - data/
-    - i18n/en.json
-    - i18n/es.json
+    - i18n/
+  
+flutter_launcher_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "img/logo.png"
+  min_sdk_android: 21 # android min sdk min:16, default 21
+  web:
+    generate: true
+    image_path: "img/logo.png"
+  windows:
+    generate: true
+    image_path: "img/logo.png"
+    icon_size: 48 # min:48, max:256, default: 48
+  macos:
+    generate: true
+    image_path: "img/logo.png"
 
+flutter_app_name:
+  name: "TEAF App"
