--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,8 @@ dependencies:
   url_launcher: ^6.0.12
   path_provider: ^2.1.3
   js: ^0.7.1
+  cupertino_icons: ^1.0.2
+  web: ^0.5.1
 
 dev_dependencies:
   flutter_test:
