--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,11 +24,11 @@ dependencies:
   web: ^0.5.1
   pdf: ^3.10.8
   printing: ^5.7.2
+  flutter_launcher_icons: ^0.13.1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_launcher_icons: ^0.12.0
   flutter_lints: ^2.0.0
   # flutter_app_name: ^0.1.0 # Eliminado para resolver conflicto
 
@@ -40,17 +40,6 @@ flutter:
     - i18n/
   
 flutter_launcher_icons:
-  android: "launcher_icon"
+  android: true
   ios: true
-  image_path: "img/logo.png"
-  min_sdk_android: 21 # android min sdk min:16, default 21
-  web:
-    generate: true
-    image_path: "img/logo.png"
-  windows:
-    generate: true
-    image_path: "img/logo.png"
-    icon_size: 48 # min:48, max:256, default: 48
-  macos:
-    generate: true
-    image_path: "img/logo.png"
+  image_path: "img/icono.png"
